Yuras/webapp/public/assets/css/viewer.css
body {
	background: #eee;
	font-family: Oxygen, sans-serif;
	color: white;
	line-height: 1.2em;
	margin: 0;
	padding: 0;
}
/* General purpose */

.pull-right {
	float: right;
}
/* Navbar */

#document-title-input {
	margin-top: -5px;
}

#document-title.not-saved:after {
	color: rgb(26, 188, 156);
	content: " *";
}

/* Wrapper */

.document-wrapper {
	width: 75%;
	display: inline-block;
	float: left;
	margin-top: 50px;
	z-index: 50;
}
.annotation-wrapper {
	width: 25%;
	height: 100%;
	background: #ddd;
	display: inline-block;
	right: 0;
	top: 50px;
	position: fixed;
	overflow: hidden;
	border-left: 1px solid #ccc;
}
.annotation-wrapper-padding {
	padding: 5%;
	position: relative;
	height: 200%;
}
/* Document styling */

/* This element is the size of a standard A4 paper. */

.document {
	background: #fefefe;
	color: #333;
	width: 780px;
	position: relative;
	display: block;
	background: white;
	/*height: 1100px;*/
	/*max-height: 1100px;*/
	margin: 25px auto;
	border: 1px solid #cdcdcd;
}
.document-content-padding {
	padding: 75px;
}
.document-body {
	outline: 0;
}
.marked {
	background: #1abc9c;
	transform: translate(-5px, 0px);
	padding: 0.1em;
	line-height: 1.4em;
	color: white;
}
/* Annotation styling */

.category-container {
	position: relative;
}

.category-dropdown {
	width: 100%;
	text-align: left;
}

.annotation-page {
	height: 95%;
	margin-bottom: 2%;
	width: 100%;
	overflow: hidden;
}
.annotation {
	padding: 5%;
	background: #1abc9c;
	margin-bottom: 15px;
	color: white;
}
.annotation:hover {
	background: #1abc9c;
}
#annotation-connector {
	position: absolute;
	top: -9999px;
	left: -9999px;
	z-index: 99;
	pointer-events: none;
	opacity: 1;
	transition: opacity 0.3s;
}

.annotation a {
	color: white;
	opacity: 0.9;
	cursor: pointer;
}

